Set minimum width for profile icon This fixes the alignment of the player name when the avatar image fails to load.

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1744,7 +1744,7 @@ body > #youtube #ytplayer {
 }
 #chamber .profileIcon  {
     margin-right: 15px;
-    /*width: 50px;*/
+    min-width: 35px;
 }
 #chamber .profileIcon a {
     display: inline-block;
